clusters/talos-robbinsdale/apps/speedtest/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "speedtest.rajsingh.info"
    - "speedtest.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: speedtest-openspeedtest
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
